WexGit/Wex_DX/force-app/main/default/objects/Lead_Development_Splits__c/Lead_Development_Splits__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Lead Development Splits</label>
</CustomObject>