WexGit/Wex_DX/force-app/main/default/objects/Lead_Development_Splits__c/fields/Commission_Type__c.field-meta.xml
<CustomField>
    <fullName>Commission_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Commission Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>