WexGit/Wex_DX/force-app/main/default/objects/Lead_Development_Splits__c/fields/Opportunity_Split_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Split_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Opportunity Split Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>