WexGit/Wex_DX/force-app/main/default/objects/Lead_Development_Splits__c/fields/Role_ID__c.field-meta.xml
<CustomField>
    <fullName>Role_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Role ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>